// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$range invalid control variable: code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local i
    for ____ = 1, 5 do
    end
end
return ____exports"
`;

exports[`$range invalid control variable: diagnostics 1`] = `"main.ts(3,8): error TSTL: For loop using $range must declare a single control variable."`;

exports[`$range invalid use ("const range = $range;"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = ____
end
return ____exports"
`;

exports[`$range invalid use ("const range = $range;"): diagnostics 1`] = `
"main.ts(2,9): error TSTL: $range can only be used in a for...of loop.
main.ts(2,17): error TSTL: $range can only be used in a for...of loop."
`;

exports[`$range invalid use ("const x = $range(1, 10);"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local x = ____(nil, 1, 10)
end
return ____exports"
`;

exports[`$range invalid use ("const x = $range(1, 10);"): diagnostics 1`] = `"main.ts(2,13): error TSTL: $range can only be used in a for...of loop."`;

exports[`$range invalid use ("const y = [...$range(1, 10)];"): code 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local y = {
        __TS__Spread(
            ____(nil, 1, 10)
        )
    }
end
return ____exports"
`;

exports[`$range invalid use ("const y = [...$range(1, 10)];"): diagnostics 1`] = `"main.ts(2,17): error TSTL: $range can only be used in a for...of loop."`;

exports[`$range invalid use ("for (const i in $range(1, 10, 2)) {}"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    for i in pairs(
        ____(nil, 1, 10, 2)
    ) do
    end
end
return ____exports"
`;

exports[`$range invalid use ("for (const i in $range(1, 10, 2)) {}"): diagnostics 1`] = `"main.ts(2,19): error TSTL: $range can only be used in a for...of loop."`;

exports[`$range invalid use ("for (const i of $range(1, 10, 2) as number[]) {}"): code 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    for ____, i in ipairs(
        ____(nil, 1, 10, 2)
    ) do
    end
end
return ____exports"
`;

exports[`$range invalid use ("for (const i of $range(1, 10, 2) as number[]) {}"): diagnostics 1`] = `"main.ts(2,19): error TSTL: $range can only be used in a for...of loop."`;

exports[`$range invalid use ("for (const i of ($range(1, 10, 2))) {}"): code 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    for ____, i in __TS__Iterator(
        ____(nil, 1, 10, 2)
    ) do
    end
end
return ____exports"
`;

exports[`$range invalid use ("for (const i of ($range(1, 10, 2))) {}"): diagnostics 1`] = `"main.ts(2,20): error TSTL: $range can only be used in a for...of loop."`;
